[package]
name = "stringwars"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8.5"
criterion = "0.5.1"
stringzilla = { version = "3.3.0" }

# Feature-based dependencies for benchmarks
[features]
bench_find = ["memchr"]
bench_levenshtein = ["rapidfuzz"]

[dependencies.memchr]
version = "2.7.1"
default-features = false
optional = true

[dependencies.rapidfuzz]
version = "0.5.0"
optional = true

[[bench]]
name = "bench_find"
path = "bench_find.rs"
harness = false
required-features = ["bench_find"]

[[bench]]
name = "bench_levenshtein"
path = "bench_levenshtein.rs"
harness = false
required-features = ["bench_levenshtein"]
